--- a/R作業/2019板橋日照時數折線圖.md
+++ b/R作業/2019板橋日照時數折線圖.md
@@ -1,1 +1,2 @@
+<img src='https://github.com/JoyC14/notes/blob/master/img/2016-2020%202%E6%9C%88%E4%BB%BD%20%E5%A3%AB%E6%9E%97%E6%BA%AB%E5%BA%A6%E7%9B%92%E9%AC%9A%E5%9C%96.jpeg' height=400 weight=400>
 
